--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 pandas>=2.3.0
-langchain>=0.3.20
+langgraph>=0.3.7,<0.4
+langchain>=0.3.20,<0.4
+langchain-openai>=0.3.8,<0.4
+langchain-anthropic>=0.3.10,<0.4
+langchain-google-genai>=2.1.5
 langgraph>=0.6.0
 duckdb>=1.3.0
+jinja2>=3.1.6
+tabulate>=0.9.0
+psycopg2-binary>=2.9.10
