Fix linter and type checking errors.
Had to change the duck db agent.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,22 @@ dev = [
 [tool.mypy]
 strict = true
 show_error_codes = true
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
