--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,13 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
 ]
 
+[project.optional-dependencies]
+examples = [
+    "matplotlib>=3.10.6",
+    "notebook>=7.4.7",
+    "python-dotenv>=1.1.1",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
