Apply nest_asyncio workaround
# Conflicts:
#	portus/__init__.py
#	pyproject.toml
#	uv.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "matplotlib>=3.10.6",
     "edaplot",
+    "nest-asyncio>=1.6.0",
 ]
 
 [project.optional-dependencies]
