--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "portus-ai"
 description = "Portus: NL queries for data"
-version = "0.0.4"
+version = "0.0.4.dev1"
 requires-python = ">=3.12"
 readme = "README.md"
 authors = []
