--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,3 +90,6 @@ select = [
 [tool.ruff.lint.flake8-tidy-imports]
 # Disallow all relative imports.
 ban-relative-imports = "all"
+
+[tool.uv]
+required-version = "==0.9.5"
