--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,17 +29,7 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
 
-      # Run fast tests on all PRs
-      - name: Run pytest (subset)
-        if: github.ref != 'refs/heads/main'
-        env:
-          OPENAI_API_KEY: 'test'  # dummy key for ChatOpenAI() to not fail since it expects a key
-        run: uv run pytest tests -v -m "not apikey"  # Skip tests requiring an API key
-
-      # TODO Use merge queues to make the PR fail should the tests fail before merging
-      # Run all tests on main
-      - name: Run pytest (all)
-        if: github.ref == 'refs/heads/main'
+      - name: Run pytest
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}  # Real API key for integration tests
         run: uv run pytest tests -v
