--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "tabulate>=0.9.0",
     "psycopg2-binary>=2.9.10",
     "matplotlib>=3.10.0",
-    "edaplot-vl==0.1.2.dev2",
+    "edaplot-vl~=0.1.2",
     "diskcache>=5.6.3",
     "sqlglot>=27.29.0",
 ]
