Disable ipynb formatting and linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
 
 [tool.ruff]
 line-length = 120
+extend-exclude = ["*.ipynb"]
 
 [tool.ruff.lint]
 select = [
