--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "databao"
 description = "databao: NL queries for data"
 dynamic = ["version"]  # Based on the git tag
-requires-python = ">=3.12,<3.14"
+requires-python = ">=3.10, <3.14"
 readme = "README.md"
 license = "Apache-2.0 AND LicenseRef-Additional-Terms"
 license-files = ["LICENSE.md"]
@@ -24,7 +24,7 @@ dependencies = [
     "tabulate>=0.9.0",
     "psycopg2-binary>=2.9.10",
     "matplotlib>=3.10.0",
-    "edaplot-vl~=0.1.0",
+    "edaplot-vl~=0.1.2",
     "diskcache>=5.6.3",
     "sqlglot>=27.29.0",
 ]
@@ -63,6 +63,7 @@ dev = [
     "pytest>=7.4.0",
     "ruff>=0.13.2",
     "types-pyyaml>=6.0.12.20250915",
+    "typing-extensions>=4.15.0",
 ]
 
 [tool.mypy]
@@ -80,6 +81,7 @@ plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
 
 [tool.ruff]
 line-length = 120
+extend-exclude = ["*.ipynb"]
 
 [tool.ruff.lint]
 select = [
