--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,9 +55,18 @@ bump = true
 
 [tool.hatch.build.targets.sdist]
 include = ["/databao"]
+artifacts = ["databao/multimodal/*.html"]
 
 [tool.hatch.build.targets.wheel]
-include = ["/databao"]
+packages = ["/databao"]
+artifacts = ["databao/multimodal/*.html"]
+
+[tool.hatch.build.hooks.custom]
+path = "hatch_build.py"
+
+[tool.hatch.build.targets.sdist.hooks.custom]
+
+[tool.hatch.build.targets.wheel.hooks.custom]
 
 [dependency-groups]
 dev = [
