--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,12 +54,10 @@ fallback-version = "0.0.0"  # https://github.com/ninoseki/uv-dynamic-versioning/
 bump = true
 
 [tool.hatch.build.targets.sdist]
-include = ["/databao"]
-artifacts = ["databao/multimodal/*.html"]
+include = ["/databao", "/client/out"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["/databao"]
-artifacts = ["databao/multimodal/*.html"]
+include = ["/databao", "/client/out"]
 
 [tool.hatch.build.hooks.custom]
 path = "hatch_build.py"
