--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "databao"
 description = "databao: NL queries for data"
 dynamic = ["version"]  # Based on the git tag
-requires-python = ">=3.10, <3.15"
+requires-python = ">=3.12, <3.15"
 readme = "README.md"
 license = "Apache-2.0 AND LicenseRef-Additional-Terms"
 license-files = ["LICENSE.md"]
@@ -38,6 +38,17 @@ examples = [
     "notebook>=7.4.7",
     "python-dotenv>=1.1.1",
 ]
+streamlit = [
+    "streamlit>=1.40.0",
+    "click>=8.0.0",
+    "pyyaml>=6.0",
+    # TODO: Switch to git dependency once mssql-python supports macOS 14 (currently requires macOS 15):
+    # "nemory @ git+ssh://git@github.com/JetBrains/databao-context-engine.git@main",
+    "nemory @ file:///Users/Yury.Khudyakov/work/toolformers/databao-context-engine/main",
+]
+
+[project.scripts]
+databao = "databao.cli:main"
 
 [build-system]
 requires = ["hatchling", "uv-dynamic-versioning"]
@@ -52,6 +63,9 @@ vcs = "git"
 style = "pep440"
 fallback-version = "0.0.0"  # https://github.com/ninoseki/uv-dynamic-versioning/blob/main/docs/tips.md
 bump = true
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.hatch.build.targets.sdist]
 include = ["/databao"]
@@ -115,6 +129,10 @@ ban-relative-imports = "all"
 [tool.uv]
 # https://github.com/ninoseki/uv-dynamic-versioning/blob/main/docs/tips.md#build-caching-and-editable-installs
 cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]
+
+# mssql-python requires macOS 15+ which breaks on macOS 14. Override to skip it on macOS.
+# This means MSSQL support won't work on macOS <15, but other databases will work fine.
+override-dependencies = ["mssql-python ; sys_platform != 'darwin'"]
 
 [tool.pytest.ini_options]
 addopts = ["--strict-markers"]
