--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "edaplot-vl~=0.1.4",
     "diskcache>=5.6.3",
     "sqlalchemy>=2.0.45",
+    "anywidget>=0.9.0",
 ]
 
 [project.urls]
