--- a/client/multimodal/tsconfig.json
+++ b/client/multimodal/tsconfig.json
@@ -23,5 +23,5 @@
       "@/*": ["./src/*"],
     },
   },
-  "include": ["src"],
+  "include": ["src", "vite.config.ts", "eslint.config.js", "**/*.d.ts"],
 }
