Rename multitabs package to multimodal-tabs and update imports accordingly
- Rename package and folder from multitabs to multimodal-tabs
- Replace MultimodalTabs component with new Tabs component
- Update dependencies and imports to use @databao/multimodal-tabs
- Add clean target to client/Makefile for node_modules and build dirs
- Refine types and utilities in multimodal-jupiter package
- Increase max-height in multimodal-jupiter styles

--- a/client/multimodal-html/package.json
+++ b/client/multimodal-html/package.json
@@ -9,8 +9,8 @@
     "build:pckg": "tsc && vite build"
   },
   "dependencies": {
-    "@databao/multitabs": "workspace:*",
-    "@radix-ui/themes": "3.2.1",
+    "@databao/multimodal-tabs": "workspace:*",
+    "@radix-ui/themes": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
   },
@@ -20,7 +20,7 @@
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "vite": "catalog:",
-    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-html": "3.2.2",
     "vite-plugin-singlefile": "2.0.2"
   }
 }
