--- a/client/pnpm-workspace.yaml
+++ b/client/pnpm-workspace.yaml
@@ -6,11 +6,16 @@ packages:
 catalog:
   react: 18.3.1
   react-dom: 18.3.1
+
   "@types/node": 25.0.3
   "@types/react": 18.3.12
   "@types/react-dom": 18.3.1
+
   "@vitejs/plugin-react": 4.3.4
   vite: 6.0.5
+
   "vite-plugin-checker": "0.12.0"
-  "vite-plugin-lib-inject-css": "2.2.2"
   "vite-plugin-dts": "4.5.4"
+  "vite-plugin-lib-inject-css": "2.2.2"
+
+  "@radix-ui/themes": 3.2.1
