--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ streamlit = [
     "streamlit>=1.53.0",  # 1.53 fixes stale element display during blocking operations
     "click>=8.0.0",
     "pyyaml>=6.0",
+    "uuid6>=2024.7.10",  # Time-ordered UUIDs (UUID6/UUID7)
     # TODO: Switch to git dependency once mssql-python supports macOS 14 (currently requires macOS 15):
     # "nemory @ git+ssh://git@github.com/JetBrains/databao-context-engine.git@main",
     "nemory @ file:///Users/Yury.Khudyakov/work/toolformers/databao-context-engine/main",
