[DBA-49] DCE integration: dce 1.2 -> 1.3 + implement Context.load(project_dir)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "edaplot-vl~=0.1.4",
     "diskcache>=5.6.3",
     "sqlalchemy>=2.0.45",
-    "databao-context-engine>=0.1.2",
+    "databao-context-engine==0.1.3",
     "pandas-stubs~=2.3.3",
 ]
 
