--- a/client/packages/multimodalTabs/package.json
+++ b/client/packages/multimodalTabs/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "vega": "6.2.0",
     "vega-embed": "7.1.0",
+    "vega-interpreter": "2.2.1",
     "vega-lite": "6.4.1"
   },
   "devDependencies": {
@@ -32,8 +33,8 @@
     "@vitejs/plugin-react": "catalog:",
     "vite": "catalog:",
     "vite-plugin-checker": "catalog:",
-    "vite-plugin-lib-inject-css": "catalog:",
-    "vite-plugin-dts": "catalog:"
+    "vite-plugin-dts": "catalog:",
+    "vite-plugin-lib-inject-css": "catalog:"
   },
   "peerDependencies": {
     "@radix-ui/themes": "3.2.1",
